--- a/LE2/LE2 - Soluções.ipynb
+++ b/LE2/LE2 - Soluções.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,24 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{ } Casamento perfeito na linha 1\n",
       "( ) Casamento perfeito na linha 1\n",
-      "ERRO de tentar fechar ) a mais na linha 1\n",
-      "ERRO de tentar fechar ) a mais na linha 1\n",
+      "ERRO de 1 [ abertos na linha 1\n",
       "[ ] Casamento perfeito na linha 2\n",
-      "{ } Casamento perfeito na linha 2\n",
-      "ERRO de 1 [ abertos na linha 2\n"
+      "( ) Casamento perfeito na linha 2\n",
+      "{ } Casamento perfeito na linha 3\n",
+      "[ ] Casamento perfeito na linha 3\n",
+      "ERRO de 1 ( abertos na linha 3\n"
      ]
     }
    ],
    "source": [
-    "texto = \"()))  \\n[]{{}\"\n",
+    "#texto = \"()))  \\n[]{{}\"\n",
+    "texto = \"([{}) \\n ([{]) \\n ([{}]\"\n",
     "def Abrir(arquivo_texto):\n",
     "    with open(arquivo_texto,encoding=\"ISO-8859-1\") as f:\n",
     "        lines = f.readlines()\n",
@@ -206,14 +209,16 @@
     "                    print(conversor[caractere],caractere,\"Casamento perfeito na linha\",(i+1))\n",
     "                except AssertionError:\n",
     "                    print(\"ERRO de tentar fechar\",caractere,\"a mais na linha\",(i+1))\n",
-    "            \n",
-    "                   \n",
+    "                       \n",
     "        if not parenteses.estaVazia():\n",
     "            print(\"ERRO de\",parenteses.__len__(),\"( abertos na linha\", (i+1))\n",
+    "            parentesesses = Stack()\n",
     "        if not colchetes.estaVazia():\n",
     "            print(\"ERRO de\",colchetes.__len__(),\"[ abertos na linha\", (i+1))\n",
+    "            colchetes = Stack()\n",
     "        if not chaves.estaVazia():\n",
     "            print(\"ERRO de\",chaves.__len__(),\"{ abertos na linha\", (i+1))\n",
+    "            chaves = Stack()\n",
     "        \n",
     "                                  \n",
     "Casamento(texto)"
@@ -260,9 +265,9 @@
     "2-[x]\n",
     "3-[x]\n",
     "4-[/] \n",
-    "5-[]   #3 << um reduce simples parece tranquilo\n",
+    "5-[/]   #3 << um reduce simples parece tranquilo\n",
     "6-[]\n",
-    "7-[]\n",
+    "7-[X]\n",
     "8-[] - dá pra tentar no Python (soma polinomios)\n",
     "9-[] -  #2 << modificar TAD de lista encadeada para colocar uma duplamente encadeada com lugares dos EUA\n",
     "10-[] - #1 << conceitual (o que são listas multiencadeadas)\n",
