--- a/LE2/LE2 - Soluções.ipynb
+++ b/LE2/LE2 - Soluções.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,99 @@
     "    def __init__( self, elem, link ) :\n",
     "        self.elem = elem\n",
     "        self.prox = link\n",
+    "\n",
+    "# Livro: Data Structures and Algorithms Using Python. Rance Necaise. 2011.\n",
+    "# listaEncadeadaOrdenada.py - \n",
+    "# Implementa um TAD Lista ordenada usando uma lista encadeada.\n",
+    "# Neste tipo de lista os elementos são inseridos na ordem certa.\n",
+    "\n",
+    "#implementa uma TAD Lista ordenada usando uma lista encadeada\n",
+    "\n",
+    "# classe para a lista ordenada usando lista encadeada\n",
+    "class ListaOrd:\n",
+    "    # Constroi uma lista vazia\n",
+    "    def __init__(self):\n",
+    "        self._head = None # Referencia ao primeiro elemento\n",
+    "        self._tamanho = 0 # Número de elementos\n",
+    "\n",
+    "    # Retorna o numero de elementos na lista. \n",
+    "    def __len__(self):\n",
+    "        return self._tamanho\n",
+    "\n",
+    "    # Determina se um elemento se encontra na lista.\n",
+    "    def __contains__(self, elem):\n",
+    "        noAtual = self._head\n",
+    "        while noAtual is not None and noAtual.elem < elem :\n",
+    "            noAtual = noAtual.next\n",
+    "        if noAtual.elem == elem :\n",
+    "           return True                # Retorna true se encontrou o elemento\n",
+    "        else :\n",
+    "           return False \n",
+    "          \n",
+    "    # Adiciona um novo elemento na lista ordenada.\n",
+    "    def adiciona(self, elem):\n",
+    "        predNo = None\n",
+    "        noAtual = self._head\n",
+    "        while noAtual is not None and elem > noAtual.elem :\n",
+    "            predNo = noAtual\n",
+    "            noAtual = noAtual.next\n",
+    "\n",
+    "        novoNo = _noLista(elem)    # Cria um novo nó, objeto _noLista()\n",
+    "        novoNo.next = noAtual      # Encadeia o novoNo antes do noAtual    \n",
+    "\n",
+    "        if noAtual == self._head :\n",
+    "           self._head = novoNo     # Encadeia o novo elemento na frente\n",
+    "        else :\n",
+    "           predNo.next = novoNo    # Encadeia o novoNo após o predNo \n",
+    "        self._tamanho += 1         # Incrementa o numero de elementos\n",
+    "\n",
+    "    # Remove o elemento elem na lista ordenada.\n",
+    "    def remove(self, elem):\n",
+    "        predNo = None              # No predecessor\n",
+    "        noAtual = self._head       # No atual\n",
+    "        while noAtual is not None and noAtual.elem < elem:\n",
+    "            predNo = noAtual\n",
+    "            noAtual = noAtual.next\n",
+    "\n",
+    "        assert noAtual is not None, \"O elemento deve estar na lista!\"\n",
+    "        self._tamanho -= 1\n",
+    "        if noAtual is self._head:       # Elemento está na primeira posição\n",
+    "            self._head = noAtual.next   # Realiza o encadeamento para exclusão\n",
+    "        else:\n",
+    "            predNo.next = noAtual.next  # Realiza o encadeamento para exclusão\n",
+    "        return noAtual.elem\n",
+    "\n",
+    "    # Cria um iterador para percorrer a lista. \n",
+    "    def __iter__(self):\n",
+    "        return _IteradorListaNOrd(self._head) # Objeto iterador\n",
+    "\n",
+    "# classe para criar um nó da lista encadeada\n",
+    "class _noLista(object):\n",
+    "    # construtor do objeto \n",
+    "    def __init__(self, elem):\n",
+    "        self.elem = elem    # elemento armazenado\n",
+    "        self.next = None    # referencia ao proximo objeto\n",
+    "\n",
+    "# clase para o iterador da lista\n",
+    "class _IteradorListaNOrd:\n",
+    "\n",
+    "    # Cria o iterador com uma referencia ao no atual\n",
+    "    def __init__(self, listHead):\n",
+    "        self._noAtual = listHead\n",
+    "\n",
+    "    # Retorna uma referencia ao iterador\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    # Retorna o elemento atual da lista e posiciona no próximo\n",
+    "    def __next__(self):\n",
+    "        if self._noAtual is None:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            elem = self._noAtual.elem\n",
+    "            self._noAtual = self._noAtual.next\n",
+    "            return elem\n",
+    "\n",
     "\n"
    ]
   },
@@ -66,8 +159,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "1FF\n"
      ]
@@ -251,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -260,40 +353,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anotações:\n",
-    "1-[x]\n",
-    "2-[x]\n",
-    "3-[x]\n",
-    "4-[/] \n",
-    "5-[/]   #3 << um reduce simples parece tranquilo\n",
-    "6-[]\n",
-    "7-[X]\n",
-    "8-[] - dá pra tentar no Python (soma polinomios)\n",
-    "9-[] -  #2 << modificar TAD de lista encadeada para colocar uma duplamente encadeada com lugares dos EUA\n",
-    "10-[] - #1 << conceitual (o que são listas multiencadeadas)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['5x^3', '4x^2', '3x^1', '4']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "\"5x^3 + 4x^2 + 3x^1 + 4\".replace(' ','').split(\"+\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "class Poli:\n",
+    "    def __init__(self):\n",
+    "        self._head = None # Referencia ao primeiro elemento\n",
+    "        self._tamanho = 0 # Número de elementos\n",
+    "class noPoli:\n",
+    "    def __init__(self,)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -740,82 +847,12 @@
     "            \n",
     "            \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 384,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 384,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 326,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python376jvsc74a57bd0319c24ade14b7873a3f936c1569cf8c1853592b8350107cb8f60c9b2a2771b37",
+   "display_name": "Python 3.7.6 64-bit ('anaconda3': virtualenv)"
   },
   "language_info": {
    "codemirror_mode": {
