--- a/LE2/LE2 - Soluções.ipynb
+++ b/LE2/LE2 - Soluções.ipynb
@@ -344,10 +344,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5x^3 + 4x^2 + -3x + 4\n5x^3 + 1x^2 + 3x + 5\n10x^3 + 5x^2 + 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Modificando o tad?\n",
+    "\n",
+    "# classe para a lista ordenada usando lista encadeada\n",
+    "class Poli:\n",
+    "    # Constroi uma lista vazia\n",
+    "    def __init__(self):\n",
+    "        self._head = None # Referencia ao primeiro elemento\n",
+    "        self._tamanho = 0 # Número de elementos\n",
+    "\n",
+    "    # Retorna o numero de elementos na lista. \n",
+    "    def __len__(self):\n",
+    "        return self._tamanho\n",
+    "\n",
+    "    # Determina se um elemento se encontra na lista.\n",
+    "    def __contains__(self, elem):\n",
+    "        noAtual = self._head\n",
+    "        while noAtual is not None and noAtual.elem < elem :\n",
+    "            noAtual = noAtual.next\n",
+    "        if noAtual.elem == elem :\n",
+    "           return True                # Retorna true se encontrou o elemento\n",
+    "        else :\n",
+    "           return False \n",
+    "          \n",
+    "    # Adiciona um novo elemento na lista ordenada.\n",
+    "    def adiciona(self, elem): \n",
+    "        predNo = None\n",
+    "        noAtual = self._head\n",
+    "        while noAtual is not None: #tirei a ccondição do no atual ser menor que o anterior, mas talvez pudesse modificar de modo a automaticamente organizar os nós pelo expoente. E talvez aqui já possibilitar a soma de polinomios\n",
+    "            predNo = noAtual\n",
+    "            noAtual = noAtual.next\n",
+    "\n",
+    "        novoNo = _noLista(elem)    # Cria um novo nó, objeto _noLista()\n",
+    "        novoNo.next = noAtual      # Encadeia o novoNo antes do noAtual    \n",
+    "\n",
+    "        if noAtual == self._head :\n",
+    "           self._head = novoNo     # Encadeia o novo elemento na frente\n",
+    "        else :\n",
+    "           predNo.next = novoNo    # Encadeia o novoNo após o predNo \n",
+    "        self._tamanho += 1         # Incrementa o numero de elementos\n",
+    "\n",
+    "    # Remove o elemento elem na lista ordenada.\n",
+    "    def remove(self, elem):\n",
+    "        predNo = None              # No predecessor\n",
+    "        noAtual = self._head       # No atual\n",
+    "        while noAtual is not None and noAtual.elem < elem: \n",
+    "            predNo = noAtual\n",
+    "            noAtual = noAtual.next\n",
+    "\n",
+    "        assert noAtual is not None, \"O elemento deve estar na lista!\"\n",
+    "        self._tamanho -= 1\n",
+    "        if noAtual is self._head:       # Elemento está na primeira posição\n",
+    "            self._head = noAtual.next   # Realiza o encadeamento para exclusão\n",
+    "        else:\n",
+    "            predNo.next = noAtual.next  # Realiza o encadeamento para exclusão\n",
+    "        return noAtual.elem\n",
+    "\n",
+    "    # Cria um iterador para percorrer a lista. \n",
+    "    def __iter__(self):\n",
+    "        return _IteradorListaNOrd(self._head) # Objeto iterador\n",
+    "\n",
+    "\n",
+    "    def PrintPoli(self):\n",
+    "        mais = False\n",
+    "        for element in self:\n",
+    "            if mais:\n",
+    "                print(' + ',end='') #ainda não vi uma forma de não imprimir o último +\n",
+    "            mais = True\n",
+    "            if element[0] == 0:\n",
+    "                pass\n",
+    "                mais = False\n",
+    "            else:\n",
+    "                print(str(element[0]),end='')\n",
+    "                if element[1] == 0:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    if element[1] == 1:\n",
+    "                        print('x',end='')\n",
+    "                    else:\n",
+    "                        print(\"x^{}\".format(element[1]),end='')\n",
+    "        print()\n",
+    "\n",
+    "# classe para criar um nó da lista encadeada\n",
+    "class _noLista(object):\n",
+    "    # construtor do objeto \n",
+    "    def __init__(self, elem):\n",
+    "        self.elem = elem    # elemento armazenado\n",
+    "        self.next = None    # referencia ao proximo objeto\n",
+    "        self.coeficiente = elem[0]\n",
+    "        self.expoente = elem[1]\n",
+    "\n",
+    "# clase para o iterador da lista\n",
+    "class _IteradorListaNOrd:\n",
+    "\n",
+    "    # Cria o iterador com uma referencia ao no atual\n",
+    "    def __init__(self, listHead):\n",
+    "        self._noAtual = listHead\n",
+    "\n",
+    "    # Retorna uma referencia ao iterador\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    # Retorna o elemento atual da lista e posiciona no próximo\n",
+    "    def __next__(self):\n",
+    "        if self._noAtual is None:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            elem = self._noAtual.elem\n",
+    "            self._noAtual = self._noAtual.next\n",
+    "            return elem\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def LerPoli(poli_str):\n",
+    "    poli_list = poli_str.replace(' ','').replace('-','+-').split(\"+\")\n",
+    "\n",
+    "    poli_final = Poli()\n",
+    "    poli = []\n",
+    "    for element in poli_list:\n",
+    "        if(element.__contains__(\"x^\")):\n",
+    "            coeficiente, expoente = element.split(\"x^\")\n",
+    "            poli.append([int(coeficiente),int(expoente)])\n",
+    "        elif(element.__contains__(\"x\")):\n",
+    "            coeficiente, expoente = element.split(\"x\")\n",
+    "            poli.append([int(coeficiente),1])\n",
+    "        else:\n",
+    "            poli.append([int(element),0])\n",
+    "    poli = sorted( poli, key=lambda x: int(x[1]) ,reverse=True)\n",
+    "\n",
+    "    for elemento in poli:\n",
+    "        #print(elemento)\n",
+    "        poli_final.adiciona(elemento)\n",
+    "    return poli_final\n",
+    "\n",
+    "\n",
+    "def SomaPoli(poli_1, poli_2):\n",
+    "    polinomio = Poli()\n",
+    "    poli_1_list = []\n",
+    "    poli_2_list = []\n",
+    "    poli_resultado = []\n",
+    "    for element in poli_1:\n",
+    "        poli_1_list.append(element)\n",
+    "    for element in poli_2:\n",
+    "        poli_2_list.append(element)\n",
+    "    poli_resultado = poli_1_list + poli_2_list\n",
+    "    expoentes = set([x[1] for x in poli_resultado])\n",
+    "    poli_resultado = [ [sum(poli[0] for poli in poli_resultado if poli[1] == expoente),expoente] for expoente in expoentes]\n",
+    "    poli_resultado = sorted(poli_resultado, key=lambda x: int(x[1]) ,reverse=True)\n",
+    "\n",
+    "    \n",
+    "   # print(poli_resultado)\n",
+    "    for poli in poli_resultado:\n",
+    "        polinomio.adiciona(poli)\n",
+    "    return polinomio\n",
+    "\n",
+    "poli_1 = LerPoli(\"5x^3 + 4x^2 -3x^1 + 4\")\n",
+    "poli_2 = LerPoli((\"5x^3 + 1x^2 + 3x^1 + 5\"))\n",
+    "poli_1.PrintPoli()\n",
+    "poli_2.PrintPoli()\n",
+    "\n",
+    "   \n",
+    "\n",
+    "poli_3 = SomaPoli(poli_1,poli_2)\n",
+    "poli_3.PrintPoli()\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,23 +534,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['5x^3', '4x^2', '3x^1', '4']"
+       "[1, 2, 3, 4]"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 105
     }
    ],
    "source": [
-    "\"5x^3 + 4x^2 + 3x^1 + 4\".replace(' ','').split(\"+\")"
+    "    i,j = 0\n",
+    "    while(i < len(poli_1_list)):\n",
+    "        if(poli_1_list[i][1] == poli_2_list[j][1]):\n",
+    "            poli_resultado.append([poli_1_list[i][0] + poli_2_list[j][0],poli_1_list[i][1]])\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'PrintPoli'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-86-7febb6e68564>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mpo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"5x^3 + 4x^2 -3x^1 + 4\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mpoli_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLerPoli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mpoli_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPrintPoli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'PrintPoli'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
