--- a/LE2/todo
+++ b/LE2/todo
@@ -1,4 +1,3 @@
-4 - Oito rainhas (4/5)
-8 - Soma Polinômios (0/5) [Vou fazer em Python]
+4 - Oito rainhas (4/5
 9 - Lista Duplamente encadeada (0/5) <
 10 -Desenho Lista Multi Encadeada (0/5)
