--- a/LE2/LE2 - Soluções.ipynb
+++ b/LE2/LE2 - Soluções.ipynb
@@ -446,11 +446,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "\n"
-   ]
+    "### 9. Modifique a TAD Lista de maneira a implementar uma lista duplamente encadeada. Inclua uma função para percorrer a lista no sentido inverso (backward). Teste a TAD duplamente encadeada usando os dados de censo populacional das cidades dos EUA. Crie uma lista duplamente encadeada com esses dados, ordenada com base no campo população. Imprima os dados da lista em ordem crescente (forward) e decrescente (backward).  "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -677,6 +677,9 @@
     }
    ],
    "source": [
+    "'''\n",
+    "Primeira tentativa\n",
+    "'''\n",
     "tabuleiro = []\n",
     "for i in range(8):\n",
     "    for j in range(8):\n",
@@ -803,6 +806,9 @@
     }
    ],
    "source": [
+    "'''\n",
+    "Segunda tentativa\n",
+    "'''\n",
     "import numpy as np\n",
     "tabuleiro = np.zeros([8,8])\n",
     "print(tabuleiro)\n",
@@ -883,10 +889,7 @@
      ]
     }
    ],
-   "source": [
-    "x = 92\n",
-    "print(x//8, x%8)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1029,9 +1032,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'tabuleiro' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-59e3dddaa474>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcasas_livres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtabuleiro\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrainhas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msolucoes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolucoes\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m92\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tabuleiro' is not defined"
+     ]
+    }
+   ],
    "source": [
     "casas_livres = tabuleiro\n",
     "rainhas = Stack()\n",
@@ -1063,9 +1078,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'i' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-281065037f4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mresultados\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresultados\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcolunas_livres\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mrainhas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#vou usar a lista python como pilha?\n",
     "\n",
@@ -1087,6 +1114,180 @@
     "        i+=1\n",
     "            \n",
     "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to check if two queens threaten each other or not\n",
+    "def isSafe(mat, r, c):\n",
+    " \n",
+    "    # return false if two queens share the same column\n",
+    "    for i in range(r):\n",
+    "        if mat[i][c] == 'Q':\n",
+    "            return False\n",
+    " \n",
+    "    # return false if two queens share the same `` diagonal\n",
+    "    (i, j) = (r, c)\n",
+    "    while i >= 0 and j >= 0:\n",
+    "        if mat[i][j] == 'Q':\n",
+    "            return False\n",
+    "        i = i - 1\n",
+    "        j = j - 1\n",
+    " \n",
+    "    # return false if two queens share the same `/` diagonal\n",
+    "    (i, j) = (r, c)\n",
+    "    while i >= 0 and j < N:\n",
+    "        if mat[i][j] == 'Q':\n",
+    "            return False\n",
+    "        i = i - 1\n",
+    "        j = j + 1\n",
+    " \n",
+    "    return True\n",
+    " \n",
+    " \n",
+    "def printSolution(mat):\n",
+    "    for i in range(N):\n",
+    "        print(mat[i])\n",
+    "    print()\n",
+    " \n",
+    " \n",
+    "def nQueen(mat, r):\n",
+    " \n",
+    "    # if `N` queens are placed successfully, print the solution\n",
+    "    if r == N:\n",
+    "        printSolution(mat)\n",
+    "        return\n",
+    " \n",
+    "    # place queen at every square in the current row `r`\n",
+    "    # and recur for each valid movement\n",
+    "    for i in range(N):\n",
+    " \n",
+    "        # if no two queens threaten each other\n",
+    "        if isSafe(mat, r, i):\n",
+    "            # place queen on the current square\n",
+    "            mat[r][i] = 'Q'\n",
+    " \n",
+    "            # recur for the next row\n",
+    "            nQueen(mat, r + 1)\n",
+    " \n",
+    "            # backtrack and remove the queen from the current square\n",
+    "            mat[r][i] = '–'\n",
+    " \n",
+    " \n",
+    "if __name__ == '__main__':\n",
+    " \n",
+    "    # `N × N` chessboard\n",
+    "    N = 8\n",
+    " \n",
+    "    # `mat[][]` keeps track of the position of queens in\n",
+    "    # the current configuration\n",
+    "    mat = [['–' for x in range(N)] for y in range(N)]\n",
+    " \n",
+    "    #nQueen(mat, 0)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "92"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "\"\"\" def issafe(q, board):\n",
+    "    x = len(board)\n",
+    "    for col in board:\n",
+    "        if col in [q+x,q-x]: return False\n",
+    "        x -= 1\n",
+    "    return True \"\"\"\n",
+    "\n",
+    "def issafe(q, board, x=1):\n",
+    "    if not board: return True\n",
+    "    if board[-1] in [q+x,q-x]: return False\n",
+    "    return issafe(q, board[:-1], x+1)\n",
+    "    \n",
+    "def solve(boardsize, board=[], solutions_found=0):\n",
+    "    if len(board) == boardsize:\n",
+    "        solutions_found += 1\n",
+    "        #display(solutions_found, board)\n",
+    "    else:\n",
+    "        for q in [col for col in range(1,boardsize+1) if col not in board]:\n",
+    "            if issafe(q,board):\n",
+    "                solutions_found = solve(boardsize, board + [q], solutions_found)\n",
+    "    return solutions_found\n",
+    "\n",
+    "\"https://stackoverflow.com/questions/64195911/backtracking-8-queens-python-problems\"\n",
+    "solve(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Issafe(queen, queens_in_board):\n",
+    "    x = len(queens_in_board)\n",
+    "    q = queen\n",
+    "    for col in queens_in_board:\n",
+    "        if col in [q+x,q-x]: return False\n",
+    "        x -= 1\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "solucoes = []\n",
+    "queens_in_board = []\n",
+    "for queen in [col for col in range(1,8+1) if col not in queens_in_board]:\n",
+    "    if len(queens_in_board) == 8:\n",
+    "        print(\"Soluão!!! nº {}\".format(len(solucoes)))\n",
+    "    elif Issafe(queen,queens_in_board):\n",
+    "        queens_in_board.append(queen)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "[1,2,3] + [4]"
    ]
   }
  ],
