pequenas modificações estéticas

--- a/LE3/LE3.ipynb
+++ b/LE3/LE3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -307,27 +307,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Contruindo árvore a partir do arquivo nomes.txt\n",
-      "Árvore construída!\n",
-      "\n",
-      "\n",
-      "Percorrendo árvore em preordem:\n",
-      "\n",
-      "Preorder: \n",
-      "['Igor Fernandes Ribeiro', '1168497337'] ['Caio Carvalho Sousa', '(61) 3935-9051'] ['Beatriz Goncalves Santos', '(11) 7254-9216'] [''] ['Estevan Fernandes Oliveira', '(79) 2606-9594'] ['Rafaela Cardoso Azevedo', '(21) 6472-2122'] ['Júlia Santos Gomes', '(11) 7663-9007'] ['Isabelle Ferreira Gomes', '(17) 9965-5908'] ['Luiza Correia Ribeiro', '(82) 5282-4250'] ['Leonor Costa Cavalcanti', '(42) 5776-2558'] ['Miguel Fernandes Oliveira', '(16) 5049-9004'] ['Yasmin Barros Ribeiro', '(41) 2763-4760'] \n",
-      "\n",
-      "\n",
-      "Percorrendo árvore em preordem:\n",
-      "\n",
-      "Preorder: \n",
-      "['Igor Fernandes Ribeiro', '1168497337'] ['Caio Carvalho Sousa', '(61) 3935-9051'] ['Beatriz Goncalves Santos', '(11) 7254-9216'] [''] ['Estevan Fernandes Oliveira', '(79) 2606-9594'] ['Rafaela Cardoso Azevedo', '(21) 6472-2122'] ['Júlia Santos Gomes', '(11) 7663-9007'] ['Isabelle Ferreira Gomes', '(17) 9965-5908'] ['Luiza Correia Ribeiro', '(82) 5282-4250'] ['Leonor Costa Cavalcanti', '(42) 5776-2558'] ['Miguel Fernandes Oliveira', '(16) 5049-9004'] ['Yasmin Barros Ribeiro', '(41) 2763-4760'] \n",
-      "\n",
-      "\n",
-      "Buscando nome:\n",
-      "['Rafaela Cardoso Azevedo', '(21) 6472-2122']\n",
-      "\n",
-      "Finalizado, savando a árvore em arquivo de texto...\n",
-      "Árvore salva!\n"
+      "Contruindo árvore a partir do arquivo nomes.txt\nÁrvore construída!\nDigite Comando\nPercorrendo árvore em preordem:\n\nPreorder: \n['Igor Fernandes Ribeiro', '1168497337'] ['Caio Carvalho Sousa', '(61) 3935-9051'] ['Beatriz Goncalves Santos', '(11) 7254-9216'] [''] ['Estevan Fernandes Oliveira', '(79) 2606-9594'] ['Rafaela Cardoso Azevedo', '(21) 6472-2122'] ['Júlia Santos Gomes', '(11) 7663-9007'] ['Isabelle Ferreira Gomes', '(17) 9965-5908'] ['Luiza Correia Ribeiro', '(82) 5282-4250'] ['Leonor Costa Cavalcanti', '(42) 5776-2558'] ['Miguel Fernandes Oliveira', '(16) 5049-9004'] ['Yasmin Barros Ribeiro', '(41) 2763-4760'] \n\nBuscando nome:\nEncontrado: ['Igor Fernandes Ribeiro', '1168497337']\n\n Adicionando novo nome:\nNovo nome e número adicionados: ['Carla Ribeiro Goncalves', '(91) 6168-2356']\n\nNome deletado: Rafaela Cardoso Azevedo\nFinalizado, savando a árvore em arquivo de texto...\nÁrvore salva!\n"
      ]
     }
    ],
@@ -356,11 +336,10 @@
     "        #name_to_find = input(\"Digite o nome a ser buscado\")\n",
     "        name_to_find = 'Igor Fernandes Ribeiro'\n",
     "        data = tree_names.find(name_to_find)\n",
-    "        print(data if data else \"Nome não encontrado\")\n",
-    "\n",
+    "        print(\"Encontrado:\",data) if data else \"Nome não encontrado\"\n",
     "    comand = 'i'\n",
     "    if comand == 'i':\n",
-    "        print(\"Adicionando novo nome:\")\n",
+    "        print(\"\\n Adicionando novo nome:\")\n",
     "        #new_data = [input(\"Digite novo nome\")]\n",
     "        #new_data.append(input(\"Digite o número\"))\n",
     "        new_data = ['Carla Ribeiro Goncalves','(91) 6168-2356']\n",
@@ -415,7 +394,7 @@
     "            print(\"\\n\\nBuscando nome:\")\n",
     "            name_to_find = input(\"Digite o nome a ser buscado\")\n",
     "            data = tree_names.find(name_to_find)\n",
-    "            print(data if data else \"Nome não encontrado\")\n",
+    "            print(\"Encontrado:\",data) if data else \"Nome não encontrado\"\n",
     "        if comand == 'i':\n",
     "            print(\"\\n\\nAdicionando novo nome:\")\n",
     "            new_data = [input(\"Digite novo nome\")]\n",
@@ -465,23 +444,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Altura: 5\nFator de balanceamento -1\nAltura 10\nFator de balanceamento -9\n"
+      "\nAltura: 5\nFator de balanceamento -1\n\nAltura 10\nFator de balanceamento -9\n\nAltura: 4\nFator de balanceamento 1\n"
      ]
     }
    ],
    "source": [
     "  ''' Following tree is getting created:\n",
     "                    10\n",
-    "                 /      \\\n",
+    "                 /     \\                                                     \n",
     "               5         12\n",
-    "              / \\           \\\n",
+    "              / \\          \\  \n",
     "            4     8          20\n",
     "                 /          /\n",
     "                7         15\n",
@@ -530,10 +509,16 @@
     "        tree.insert(i)\n",
     "tree2 = Tree()\n",
     "TreeFiller(tree2,10)\n",
-    "print(\"Altura:\",TreeHeight(tree.root))\n",
+    "print(\"\\nAltura:\",TreeHeight(tree.root))\n",
     "print(\"Fator de balanceamento\",BalacedFactor(tree.root))\n",
-    "print(\"Altura\",TreeHeight(tree2.root))\n",
-    "print(\"Fator de balanceamento\",BalacedFactor(tree2.root))\n"
+    "print(\"\\nAltura\",TreeHeight(tree2.root))\n",
+    "print(\"Fator de balanceamento\",BalacedFactor(tree2.root))\n",
+    "\n",
+    "tree.delete(20)\n",
+    "tree.delete(10)\n",
+    "print(\"\\nAltura:\",TreeHeight(tree.root))\n",
+    "print(\"Fator de balanceamento\",BalacedFactor(tree.root))\n",
+    "\n"
    ]
   },
   {
@@ -648,28 +633,6 @@
     "code = TextToHuffCode(text,huff_encode)\n",
     "print(code)\n",
     "HuffToText(code,huff_encode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'Igor Fernandes Ribeiro, 1168497337\\nCaio Carvalho Sousa, (61) 3935-9051\\nBeatriz Goncalves Santos, (11) 7254-9216\\nEstevan Fernandes Oliveira, (79) 2606-9594\\nCarla Ribeiro Goncalves,(91) 6168-2356\\nYasmin Barros Ribeiro, (41) 2763-4760\\nJúlia Santos Gomes, (11) 7663-9007\\nIsabelle Ferreira Gomes, (17) 9965-5908\\nLuiza Correia Ribeiro, (82) 5282-4250\\nLeonor Costa Cavalcanti, (42) 5776-2558\\nMiguel Fernandes Oliveira, (16) 5049-9004'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 258
-    }
-   ],
-   "source": [
-    "\n",
-    "#\"\\n\".join(str(name_number). for name_number in to_text)\n",
-    "\n"
    ]
   }
  ]
